Finished non-extra credit programming tests